--- a/static/styles.css
+++ b/static/styles.css
@@ -1,176 +1,355 @@
-body {
-  overflow-x: hidden;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  /* height: 1000vh; */
-  width: 100vw;
-  background-color: #141414;
-  /* overflow: hidden; */
-}
 
-* {
-  font-size: 24px;
-  text-align: center;
-  color: black;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  box-sizing: border-box;
-  font-family: Jakarta;
-  font-weight: 300;
-}
+	@font-face {
+		font-family: 'Circular';
+		src: url('/fonts/CircularStd-Book.otf');
+	}
+	body {
+		overflow-x: hidden;
+		margin: 0;
+		padding: 0;
+		border: 0;
+		/* height: 1000vh; */
+		width: 100vw;
+		height: 100vh;
+		background-color: #141414;
+		/* overflow: hidden; */
+	}
 
-.inputHolder {
-  width: 78%;
-  height: 50px;
-  padding-bottom: 5px;
-  margin: 0 auto;
-  margin-top: 10px;
-  background: #212121;
-  border-radius: 5px;
-  color: white;
-  text-align: left;
-  border: 2px solid #333;
-  transition: all 0.2s linear;
-}
-.userInput {
-  width: 92.5%;
-  min-height: 35px;
-  margin-left: 10px;
-  margin-top: 10px;
-  background: #212121;
-  color: white;
-  text-align: left;
-}
-.inputHolder .userInput:focus {
-  border-color: blue;
-  border-width: medium medium 2px;
-}
-.inputHolder .floatingLabel {
-  position: relative;
-  pointer-events: none;
-  top: -40px;
-  left: 10px;
-  transition: 0.2s ease all;
-  font-size: 15px;
-  color: #727272;
-}
-.inputHolder input:focus ~ .floatingLabel,
-.inputHolder input:not(:focus):valid ~ .floatingLabel {
-  top: -57px;
-  left: 10px;
-  font-size: 10px;
-  opacity: 1;
-}
+	* {
+		font-size: 24px;
+		text-align: center;
+		color: white;
+		margin: 0;
+		padding: 0;
+		border: 0;
+		outline: 0;
+		box-sizing: border-box;
+		font-family: Circular;
+		font-weight: 300;
+	}
 
-.inputHolder:focus-within {
-  border: 2px solid rgb(90, 90, 90);
-}
+	.inputHolder {
+		width: 300px;
+		height: 50px;
+		padding-bottom: 5px;
+		margin: 0 auto;
+		margin-top: 10px;
+		background: #212121;
+		border-radius: 5px;
+		color: white;
+		text-align: left;
+		border: 2px solid #333;
+		transition: all 0.2s linear;
+	}
+	.userInput {
+		width: 92.5%;
+		font-size: 20px !important;
+		min-height: 35px;
+		margin-left: 10px;
+		margin-top: 5px;
+		background: #212121;
+		color: white;
+		text-align: left;
+	}
+	.inputHolder .userInput:focus {
+		border-color: blue;
+		border-width: medium medium 2px;
+	}
+	.inputHolder .floatingLabel {
+		position: relative;
+		pointer-events: none;
+		top: -40px;
+		left: 10px;
+		transition: 0.2s ease all;
+		font-size: 15px;
+		color: #727272;
+	}
+	.inputHolder input:focus ~ .floatingLabel,
+	.inputHolder input:not(:focus):valid ~ .floatingLabel {
+		top: -57px;
+		left: 10px;
+		font-size: 10px;
+		opacity: 1;
+	}
 
-input {
-  font-size: 17px !important;
-}
+	.inputHolder:focus-within {
+		border: 2px solid rgb(90, 90, 90);
+	}
 
-@media (max-width: 460px) {
-  #loginForm {
-    width: 325px !important;
-  }
-}
+	input {
+		font-size: 17px !important;
+	}
 
-.shake {
-  animation: shake2 0.2s linear;
-}
+	.desc {
+		width: 700px;
+		height: 30px;
+		margin: 0 auto;
+		/* background: white; */
+		display: flex;
+		margin-top: 20px;
+		border-bottom: #727272;
+	}
 
-.wrong {
-  border: 2px solid red;
-}
+	.empty {
+		width: 14%;
+		height: 100%;
+		/* background: green; */
+	}
 
-@keyframes shake2 {
-  25% {
-    transform: translateX(11px);
-  }
+	.titleHolder {
+		width: 40%;
+		height: 100%;
+		/* background: blue; */
+		display: flex;
+		justify-content: start;
+		align-items: center;
+	}
 
-  50% {
-    transform: translateX(0px);
-  }
+	.albumTitle {
+		width: 37.5%;
+		height: 100%;
+		/* background: yellow; */
+		display: flex;
+		justify-content: start;
+		align-items: center;
+	}
 
-  75% {
-    transform: translateX(-11px);
-  }
-}
+	.durationHolder {
+		width: 8.5%;
+		height: 100%;
+		/* background: orange; */
+		display: flex;
+		justify-content: start;
+		align-items: center;
+	}
 
-p {
-  margin-top: -15px;
-  padding: 0px 20px 5px 20px;
-  color: rgb(142, 142, 142);
-  font-size: 14px;
-  font-weight: 400;
-  transition: all 0.2s linear;
-}
+	.durationImage {
+		color: red;
+	}
 
-#userInput {
-  /* width: 264px; */
-  width: 87.5%;
-  height: 34px !important;
-  margin-left: 19px;
-  margin-top: 2px;
-  background: #212121 !important;
-  color: white;
-  text-align: left;
-}
+	h4 {
+		color: rgb(142, 142, 142);
+		font-size: 15px;
+		font-weight: 700;
+	}
 
-#inputHolder {
-  width: 75%;
-  height: 40px;
-  margin: 0 auto;
-  margin-top: 10px;
-  background: #212121;
-  border-radius: 20px;
-  color: white;
-  text-align: left;
-}
+	.songContainer {
+		width: 700px;
+		height: 500px;
+		overflow: scroll;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		gap: 10px;
+		margin: 0 auto;
+		border-radius: 15px;
+		margin-top: 5px;
+		/* background: red; */
+	}
 
-h1 {
-  font-size: 35px;
-  font-weight: 600;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  color: white;
-}
+	.song {
+		width: 100%;
+		min-height: 60px;
+		background: #181818;
+		display: flex;
+		border-radius: 6px;
+		transition: 0.2s ease-in-out;
+		cursor: pointer;
+	}
 
-#loginForm {
-  margin: 0 auto;
-  background: #1b1b1b;
-  width: 400px;
-  height: 375px;
-  border-radius: 15px;
-  margin-top: 7vh;
-}
+	.song:nth-child(1) {
+		margin-top: 900px;
+	}
 
-/* input {
-  margin: 0 auto;
-  line-height: 16px;
-} */
+	.song:hover {
+		background: #282828;
+	}
 
-a {
-  text-decoration: none;
-}
+	.thumbnail {
+		width: 45px;
+		height: 45px;
+		/* float: left;
+		margin-left: 20px;
+		margin: 0 auto; */
+		position: relative;
+		top: 13.5%;
+		left: 5%;
+	}
 
-#standardButton {
-  margin: 0 auto;
-  margin-top: 30px;
-  width: 78%;
-  height: 50px;
-  color: white;
-  font-weight: 600;
-  background-color: #212121;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: all 0.2s linear;
-}
+	.properties {
+		width: 40%;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: start;
+		align-items: start;
+		margin-left: 7.5%;
+		padding-right: 4.5%;
+	}
 
-#standardButton:hover {
-  background: rgb(56, 56, 56);
-}
+	.albumHolder {
+		width: 30%;
+		height: 100%;
+		display: flex;
+		justify-content: start;
+		align-items: center;
+	}
+
+	h2 {
+		font-size: 15px;
+		text-align: left;
+		margin-top: 12px;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		max-height: 18px;
+		max-width: 250px;
+	}
+
+	h3 {
+		font-size: 13px;
+		text-align: left;
+		float: left;
+		color: rgb(142, 142, 142);
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+
+	.artist {
+		max-height: 18px;
+		max-width: 230px;
+	}
+
+	.explicit {
+		width: 14px;
+		height: 14px;
+		background: #a5a3a2;
+		border-radius: 2px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		/* margin-top: -1px; */
+	}
+
+	.explicitHolder {
+		padding-right: 5px;
+	}
+
+	.explicitText {
+		font-size: 8px;
+		color: #121212;
+		text-align: center;
+		margin-top: 1px;
+	}
+
+	.explicitAndArtist {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 20px;
+		margin-top: 1px;
+	}
+
+	@media (max-width: 460px) {
+		#loginForm {
+			width: 325px !important;
+		}
+	}
+
+	.shake {
+		animation: shake2 0.2s linear;
+	}
+
+	.wrong {
+		border: 2px solid red;
+	}
+
+	@keyframes shake2 {
+		25% {
+			transform: translateX(11px);
+		}
+
+		50% {
+			transform: translateX(0px);
+		}
+
+		75% {
+			transform: translateX(-11px);
+		}
+	}
+
+	p {
+		margin-top: -15px;
+		padding: 0px 20px 5px 20px;
+		color: rgb(142, 142, 142);
+		font-size: 14px;
+		font-weight: 400;
+		transition: all 0.2s linear;
+	}
+
+	#userInput {
+		/* width: 264px; */
+		width: 87.5%;
+		height: 34px !important;
+		margin-left: 19px;
+		margin-top: 2px;
+		background: #212121 !important;
+		color: white;
+		text-align: left;
+	}
+
+	#inputHolder {
+		width: 75%;
+		height: 40px;
+		margin: 0 auto;
+		margin-top: 10px;
+		background: #212121;
+		border-radius: 20px;
+		color: white;
+		text-align: left;
+	}
+
+	h1 {
+		font-size: 40px;
+		font-weight: 700;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		color: white;
+	}
+
+	#loginForm {
+		margin: 0 auto;
+		background: #1b1b1b;
+		width: 400px;
+		height: 375px;
+		border-radius: 15px;
+		margin-top: 7vh;
+	}
+
+	/* input {
+		margin: 0 auto;
+		line-height: 16px;
+	} */
+
+	a {
+		text-decoration: none;
+	}
+
+	#loginButton {
+		margin: 0 auto;
+		margin-top: 30px;
+		width: 78%;
+		height: 50px;
+		color: white;
+		font-weight: 600;
+		background-color: #212121;
+		border-radius: 5px;
+		cursor: pointer;
+		transition: all 0.2s linear;
+	}
+
+	#loginButton:hover {
+		background: rgb(56, 56, 56);
+	}
