--- a/static/styles.css
+++ b/static/styles.css
@@ -10,7 +10,7 @@ body {
 	/* height: 1000vh; */
 	width: 100vw;
 	height: 100vh;
-	background-color: #141414;
+	background-color: #212121;
 	/* overflow: hidden; */
 }
 
@@ -27,7 +27,7 @@ body {
 	font-weight: 300;
 }
 
-.inputHolder {
+/* .inputHolder {
 	width: 300px;
 	height: 50px;
 	padding-bottom: 5px;
@@ -77,7 +77,7 @@ body {
 
 input {
 	font-size: 17px !important;
-}
+} */
 
 h2 {
 	font-size: 15px;
