--- a/static/styles.css
+++ b/static/styles.css
@@ -2,14 +2,15 @@
 	font-family: 'Circular';
 	src: url('/fonts/CircularStd-Book.otf');
 }
+
 body {
 	overflow-x: hidden;
-	margin: 0;
+	margin: 60px 0 0 0;
 	padding: 0;
 	border: 0;
-	/* height: 1000vh; */
+	height: 1000vh;
 	width: 100vw;
-	height: 100vh;
+	/* height: 100vh; */
 	background-color: #212121;
 	/* overflow: hidden; */
 }
